crates/lash/tests/ui/host_event_emit_requires_effect_scope.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> tests/ui/host_event_emit_requires_effect_scope.rs:5:10
   |
 5 |           .emit(lash::host_events::HostEventOccurrenceRequest::new(
   |  __________^^^^-
 6 | |             "ui.button.pressed",
 7 | |             source_key,
 8 | |             serde_json::json!({ "pressed": true }),
 9 | |             "button-press-1",
10 | |         ))
   | |__________- argument #2 of type `ScopedEffectController<'_>` is missing
   |
note: method defined here
  --> src/control.rs
   |
   |     pub async fn emit(
   |                  ^^^^
help: provide the argument
   |
 5 |         .emit(lash::host_events::HostEventOccurrenceRequest::new(
...
 9 |             "button-press-1",
10 ~         ), /* ScopedEffectController<'_> */)
   |
